tests/ui/derives/deriving-primitive.stderr
error: cannot find derive macro `FromPrimitive` in the crate root
  --> $DIR/deriving-primitive.rs:1:10
   |
LL | #[derive(FromPrimitive)]
   |          ^^^^^^^^^^^^^ not found in the crate root

error: cannot find derive macro `FromPrimitive` in the crate root
  --> $DIR/deriving-primitive.rs:1:10
   |
LL | #[derive(FromPrimitive)]
   |          ^^^^^^^^^^^^^ not found in the crate root
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

